--- a/css/style.css
+++ b/css/style.css
@@ -18,38 +18,54 @@
     --cor-padrao:#4EDB71;
 }
 
+body {
+    padding-bottom: 80px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
 .destaque{
     width: 100%;
     min-height: 100vh;
-    background-image: url('../img/Fundo.png');
     background-size: cover;
     background-position: center;
     background-color:var(--cor-link-topo);
 }
 
-nav{
-    display:flex;
+nav {
+    display: flex;
     background-color: var(--cor-padrao-fonte);
-    justify-content:space-between;
-    align-items:center;
+    justify-content: space-around; 
+    align-items: center;
     position: fixed;
     bottom: 0;
     width: 100%;
     border-radius: 30px;    
+    margin-bottom: 10px;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1); 
 }
 
-nav .menu-outline{
-    display: none;
+.navlinks {
+    display: flex; 
+    justify-content: space-around; 
+    width: 100%; 
 }
 
-.navlinks li{
-    display: inline-block;
+.navlinks li {
     list-style: none;
-    margin: 25px;
-    padding-left: 10px;
+    margin: 0; 
+    padding: 0 10px; 
 }
 
-.navlinks li ion-icon{
+.navlinks li a {
+    text-decoration: none; 
+    color: inherit; 
+    display: flex; 
+    align-items: center; 
+}
+
+.navlinks li ion-icon {
     font-size: 33px;
 }
 
