--- a/css/style.css
+++ b/css/style.css
@@ -32,18 +32,18 @@ body {
     background-position: center;
     background-color:var(--cor-link-topo);
 }
-
 nav {
     display: flex;
-    background-color: var(--cor-padrao-fonte);
+    background-color: rgba(255, 255, 255, 0.9); 
     justify-content: space-around; 
     align-items: center;
-    position: fixed;
+    position: fixed; 
     bottom: 0;
-    width: 100%;
+    width: 90%;
     border-radius: 30px;    
-    margin-bottom: 10px;
+    padding: 10px 0; 
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1); 
+    z-index: 10; 
 }
 
 .navlinks {
@@ -76,8 +76,8 @@ nav {
 
 .location {
     position: absolute ;
-    top: 50px; /* Distância do topo */
-    right: 10px; /* Distância da direita */
+    top: 50px; 
+    right: 10px;
     display: flex;
     align-items: center;
 }
@@ -90,8 +90,8 @@ nav {
 
 .container-sup h3{
     position: absolute ;
-    top: 35px; /* Distância do topo */
-    right: 33px; /* Distância da direita */
+    top: 35px; 
+    right: 33px; 
     display: flex;
     align-items: center;
     color: #838383;
@@ -145,7 +145,7 @@ nav {
     margin-top: 15px;
     display: flex;
     overflow-x: auto; /* Adiciona rolagem horizontal para dispositivos menores */
-    -webkit-overflow-scrolling: touch; /* Adiciona rolagem suave para dispositivos iOS */
+    -webkit-overflow-scrolling: touch; 
 }
 
 .slide {
