--- a/css/styleCadastro.css
+++ b/css/styleCadastro.css
@@ -11,18 +11,22 @@ body {
     flex-direction: column;
     align-items: center; 
 }
-
+.logo img{
+    width: 200px; 
+    height: auto; 
+}
 nav {
     display: flex;
-    background-color: var(--cor-padrao-fonte);
+    background-color: rgba(255, 255, 255, 0.9); 
     justify-content: space-around; 
     align-items: center;
-    position: fixed;
+    position: fixed; 
     bottom: 0;
-    width: 100%;
+    width: 90%;
     border-radius: 30px;    
     padding: 10px 0; 
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1); 
+    z-index: 10; 
 }
 
 .navlinks {
