--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 
 .destaque{
     width: 100%;
-    min-height: 100vh;
+    max-width: 600px;
     background-size: cover;
     background-position: center;
     background-color:var(--cor-link-topo);
@@ -55,7 +55,7 @@ nav {
 .navlinks li {
     list-style: none;
     margin: 0; 
-    padding: 0 10px; 
+    padding: 0 15px; 
 }
 
 .navlinks li a {
@@ -67,6 +67,10 @@ nav {
 
 .navlinks li ion-icon {
     font-size: 33px;
+}
+
+.navlinks li a:hover ion-icon {
+    color: #008f17; 
 }
 
 .logo{
