--- a/css/styleDash.css
+++ b/css/styleDash.css
@@ -34,7 +34,7 @@ nav {
 .navlinks li {
   list-style: none;
   margin: 0; 
-  padding: 0 10px; 
+  padding: 0 15px; 
 }
 
 .navlinks li a {
@@ -46,6 +46,10 @@ nav {
 
 .navlinks li ion-icon {
   font-size: 33px;
+}
+
+.navlinks li a:hover ion-icon {
+  color: #008f17; 
 }
 
 .rectangle-7 {
