--- a/css/styleDescricao.css
+++ b/css/styleDescricao.css
@@ -1,11 +1,53 @@
-*{
-  margin:2px;
-  padding:0px;
-  box-sizing: border-box;
-  font-family: 'raleway', sans-serif;
-  max-width: 390px;
+body {
+  background-color: #f9f9f9;
+  font-family: 'Raleway', sans-serif;
+  color: #333;
+  margin: 0;
+  padding: 0;
 }
-
+.main-container {
+  padding: 20px;
+  max-width: 600px;
+  margin: auto;
+  background: white;
+  border-radius: 20px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+.imagem-principal {
+  width: 100%;
+  height: auto;
+  border-radius: 20px;
+  margin-bottom: 15px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+.info-container {
+  margin-top: 15px;
+}
+.descricao {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 10px;
+  color: #333;
+}
+.localizacao, .valor, .telefone {
+  font-size: 1.1em;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+}
+.localizacao i, .valor i, .telefone i {
+  margin-right: 8px;
+  color: #007BFF;
+}
+.back-button {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 24px;
+  color: #007BFF;
+  text-decoration: none;
+}
 nav {
   display: flex;
   background-color: rgba(255, 255, 255, 0.9); 
@@ -21,131 +63,28 @@ nav {
 }
 
 .navlinks {
-    display: flex; 
-    justify-content: space-around; 
-    width: 100%; 
+  display: flex; 
+  justify-content: space-around; 
+  width: 100%; 
 }
 
 .navlinks li {
-    list-style: none;
-    margin: 0; 
-    padding: 0 10px; 
+  list-style: none;
+  margin: 0; 
+  padding: 0 15px; 
 }
 
 .navlinks li a {
-    text-decoration: none; 
-    color: inherit; 
-    display: flex; 
-    align-items: center; 
+  text-decoration: none; 
+  color: inherit; 
+  display: flex; 
+  align-items: center; 
 }
 
 .navlinks li ion-icon {
-    font-size: 33px;
+  font-size: 33px;
 }
-.main-container {
-  position: relative;
-  width: 375px;
-  height: 812px;
-  margin: 0 auto;
-  font-size: 0px;
-  background: #f9f9f9;
-  overflow: hidden;
-  border-radius: 20px;
-}
-.descricao {
-  display: block;
-  position: relative;
-  height: 27.098px;
-  margin: 339px 0 0 20px;
-  color: #000000;
-  font-family: Raleway, var(--default-font-family);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 18.784px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 8;
-}
-.estacao-trabalho {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: relative;
-  width: 335px;
-  height: 51.344px;
-  margin: 8.557px 0 0 20px;
-  color: #848484;
-  font-family: Raleway, var(--default-font-family);
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 18px;
-  text-align: left;
-  z-index: 9;
-}
-.image {
-  position: absolute;
-  width: 335px;
-  height: 305.348px;
-  top: 20px;
-  left: 20px;
-  background: url(./assets/images/b36d5926-4469-4857-abd3-3e4f107a28bc.png)
-    no-repeat center;
-  background-size: cover;
-  z-index: 2;
-  border-radius: 20px;
-}
-.ic-back {
-  position: relative;
-  width: 34px;
-  height: 34.151px;
-  margin: 20.089px 0 0 20px;
-  background: url(./assets/images/0c1a9cba-83ab-4cf9-af34-bb8bb8d35bfc.png)
-    no-repeat center;
-  background-size: cover;
-  z-index: 4;
-}
-.rectangle {
-  position: relative;
-  width: 194px;
-  height: 63.279px;
-  margin: 162.718px 0 0 3px;
-  cursor: pointer;
-  background: #4edb71;
-  border: none;
-  z-index: 3;
-  border-radius: 30px;
-}
-.hair-beleza {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 38.169px;
-  top: 5.022px;
-  left: 22px;
-  color: #ffffff;
-  font-family: Poppins, var(--default-font-family);
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 30px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 5;
-}
-.av-jardim-das-flores {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 18.08px;
-  top: 32.142px;
-  left: 22px;
-  color: #ffffff;
-  font-family: Poppins, var(--default-font-family);
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 18px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 6;
+
+.navlinks li a:hover ion-icon {
+  color: #008f17; 
 }
