--- a/css/stylePerfil.css
+++ b/css/stylePerfil.css
@@ -38,7 +38,7 @@ nav {
 .navlinks li {
     list-style: none;
     margin: 0; 
-    padding: 0 10px; 
+    padding: 0 15px; 
 }
 
 .navlinks li a {
@@ -52,6 +52,9 @@ nav {
     font-size: 33px;
 }
 
+.navlinks li a:hover ion-icon {
+    color: #008f17; 
+}
 h1 {
     text-align: center;
     color: #333;
