--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,18 @@ a {
     margin: 5px 0;
     font-weight:normal;
 }
+.container-sup {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.notificacao {
+    position: relative;
+    margin-left: 20px; /* Espaço entre o nome do usuário e o ícone de notificações */
+}
+
+.notificacao ion-icon {
+    font-size: 24px; /* Tamanho do ícone */
+    cursor: pointer; /* Cursor de ponteiro ao passar o mouse */
+}
